--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -54,5 +54,5 @@
 }
 
 .titleText{
-    margin-left: 5rem;
+    margin-left: 10rem;
 }
